<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_PwrMgmt_HAWino" Id="{8250481c-da3f-4e88-ad44-e018067d3828}">
    <Declaration><![CDATA[TYPE ST_PwrMgmt_HAWino :
STRUCT
	Output	: ST_PwrMgmt_HAWino_In;		// Im Vergleich zur Chargingstation_3 sind hier Input und Output vertauscht!
	Input	: ST_PwrMgmt_HAWino_Out;
END_STRUCT
END_TYPE
 ]]></Declaration>
  </DUT>
</TcPlcObject>